# sipecho

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
CMakeModules/: CheckStructHasMember.cmake  CmakeCompile.cmake  FindConfuse.cmake  FindEvent.cmake  FindLdns.cmake  FindOsip2.cmake  FindProtobufC.cmake
example/: go.sum
example/cmd/: main.go
example/sip/: service.go  service_test.go
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  base64.c  base64.h  json.c  json.h  map.c  map.h  memdup.c  strncasestr.c  xml.c  xml.h
lib/mqtt/: CMakeLists.txt  mqtt.c  mqtt_pal.c
lib/proto/: CMakeLists.txt  message_clone.c  message_clone.h  message_print.c  message_print.h  message_xml.c  message_xml.h  transport.c  transport.h
lib/proto/sip/: CMakeLists.txt  message.proto  service.proto  sip.c  sip.h  type.proto
src/: CMakeLists.txt  aor.c  aor.h  app.c  app.h  cmd.c  dns.c  ini.c  ini.h  log.c  log.h  main.c  mem.c  mem.h  net.c  net.h  notify.c  notify.h  sip.c  tcp.c  tls.c  udp.c
src/pem/: cert.pem  dh.pem  howto.txt  pkey.pem  root.pem
src/pem2/: cert.pem  linphone.pem  pkey.pem
