#
# Top project cmake file
#

CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT (SIP C)

SET(PROJECT_VERSION_MAJOR 0)
SET(PROJECT_VERSION_MINOR 3)
SET(PROJECT_VERSION_PATCH 1)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMakeModules/)

FIND_PACKAGE(Event REQUIRED)
FIND_PACKAGE(Osip2 REQUIRED)
FIND_PACKAGE(Confuse REQUIRED)         
FIND_PACKAGE(ProtobufC REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)
FIND_PACKAGE(Ldns REQUIRED)

INCLUDE(CmakeCompile)
INCLUDE(CheckIncludeFiles)
INCLUDE(CheckStructHasMember)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-g -Wall -pthread")

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src)

# Output test results to config.h
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)

